Added panning within image bounds, refactored pointer handling and CSS transforms

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     class Main {
       static run() {
-        new Gallery().init(document.querySelector('#viewport'), this.cb);
+        new Gallery(document.querySelector('#viewport'), this.cb);
       }
 
       static cb(i) {
